objects/Location__c.object
<CustomObject>
    <description>Hold information about location coordinates.</description>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude of this location.</description>
        <label>Latitude</label>
        <precision>13</precision>
        <required>true</required>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude of this location.</description>
        <label>Longitude</label>
        <precision>13</precision>
        <required>true</required>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>This field is used as externalId in a script for updating Location Object with latest Zip Code data.</description>
        <externalId>true</externalId>
        <label>ZipCode</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Location</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>